--- a/moodeface.html
+++ b/moodeface.html
@@ -203,6 +203,11 @@
           font-weight: bold;
           text-transform: uppercase;margin-left: -0.3vmin;
         }
+        #playstate:active{
+          color: #e3d25f;
+          position: relative;
+          top: 0.5vmin;
+        }
         #timer {
           font-size: 15vmin;
           font-weight: bold;
@@ -235,6 +240,7 @@
           background: rgba(0,0,0,0.2);
           height: 1vmin;
           margin: 1vmin 0 0 0;
+          overflow: hidden;
         }
         #playerprogress {
           height: 1vmin;
@@ -1345,7 +1351,7 @@
               this._duration.textContent=d.getUTCHours()==0?`${this._pad(d.getMinutes())}:${this._pad(d.getSeconds())}`
                             :`${this._pad(d.getUTCHours())}:${this._pad(d.getMinutes())}:${this._pad(d.getSeconds())}`;
               this._prevd=duration;
-              this._handle.style.width = getId("playerprogressbg").clientWidth+"px";
+              //this._handle.style.width = getId("playerprogressbg").clientWidth+"px";
             }
             this._prevv=value;
             
